--- a/css/checkout.css
+++ b/css/checkout.css
@@ -327,6 +327,7 @@
     margin: 2px 0 10px;
     line-height: 16px;
     color: #000;
+
 }
 
 .cart-item-list .cart-item-title .item-count-down .icon-clock {
@@ -365,7 +366,10 @@
     padding-left: 65px;
     color: #999;
 }
-
+.cart-item-list .item-include dl dd img{
+    width: 100px;
+    height: 100px;
+}
 .cart-item-list .item-include dl:after {
     visibility: hidden;
     display: block;
